--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.0.0",
     "jetifier": "^1.6.5",
     "react": "16.11.0",
     "react-native": "0.62.1",
