--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^4.0.0",
+    "@react-native-community/picker": "^1.6.6",
     "jetifier": "^1.6.5",
     "react": "16.11.0",
     "react-native": "0.62.1",
