--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jetifier": "^1.6.5",
     "react": "16.11.0",
     "react-native": "0.62.1",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
