--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.11.0",
     "react-native": "0.62.1",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-color-matrix-image-filters": "^5.2.5",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
